[tool.poetry]
name = "play_with_misskey"
version = "0.1.0"
description = ""
authors = ["Laplusdestiny <prayonshootingstars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
plotly = "*"
tqdm = "*"
requests = "*"
schedule = "*"
autopep8 = "*"
kaleido = "0.2.1"
japanize-matplotlib = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
ipywidgets = "*"
jupyterlab = "*"
jupyter-contrib-nbextensions = "*"
jupyter = "*"


[tool.poetry.group.stubs.dependencies]
pandas-stubs = "*"
types-requests = "*"
types-tqdm = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
