[project]
name = "play-with-misskey"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Laplusdestiny", email = "prayonshootingstars@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "tqdm>=4.66.4",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "ruff>=0.4.8",
    "kaleido==0.2.1",
    "japanize-matplotlib>=1.1.3",
    "ipywidgets>=8.1.3",
    "pandas-stubs>=2.2.2.240603",
    "types-requests>=2.32.0.20240602",
    "types-tqdm>=4.66.0.20240417",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipywidgets>=8.1.3",
    "pandas-stubs>=2.2.2.240603",
    "types-requests>=2.32.0.20240602",
    "types-tqdm>=4.66.0.20240417",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/play_with_misskey"]
